<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/auth_header"
        android:text="@string/login_login" />

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/auth_image"
        app:layout_constraintTop_toBottomOf="@+id/loginHeader" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage">

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/auth_fields"
            android:hint="@string/login_username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/auth_fields"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/loginForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/auth_textview"
            android:text="@string/login_forget_password"/>

        <TextView
            android:id="@+id/loginRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/auth_textview"
            android:text="@string/login_register"/>

        <Button
            android:id="@+id/loginButton"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"

            android:layout_marginBottom="8dp"
            android:text="@string/login_button"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>