<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profileTopBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/top_background" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/profileImage"
                android:layout_width="120sp"
                android:layout_height="120sp"
                app:layout_constraintBottom_toBottomOf="@+id/profileTopBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileTopBackground"
                app:placeholderImage="@drawable/success"
                app:failureImage="@drawable/error"/>

            <TextView
                android:id="@+id/profileUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lux Dule"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/profileImage"
                app:layout_constraintStart_toStartOf="@+id/profileImage"
                app:layout_constraintTop_toBottomOf="@+id/profileImage" />

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Luxx@mail.com"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileUsername" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/profileEmail"
                android:layout_marginTop="50sp">

                <Button
                    android:id="@+id/profilePlayMusic"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    style="@style/profile_button"
                    android:drawableEnd="@drawable/music"
                    android:text="@string/profile_music" />

                <Button
                    android:id="@+id/profileWatchVideos"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    style="@style/profile_button"
                    android:drawableEnd="@drawable/videos"
                    android:text="@string/profile_videos" />

                <Button
                    android:id="@+id/profileBrowseNews"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    style="@style/profile_button"
                    android:drawableEnd="@drawable/news"
                    android:text="@string/profile_news" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>